--- a/Views/Emprestimo/Cadastrar.cshtml
+++ b/Views/Emprestimo/Cadastrar.cshtml
@@ -1,5 +1,4 @@
-﻿@*
-*@
+﻿@model EmprestimosModel
 @{
 	ViewData["title"] = "Cadastrar Empréstimo";
 }
@@ -8,26 +7,29 @@
     <div class="mb-5 text-center">
         <h1 class="text-light">Cadastro de Empréstimos</h1>
     </div>
-<form>
 
+<form method="post" asp-controller="Emprestimo" asp-action="Cadastrar">
     <div class="mb-3">
-        <label for="Recebedor" class="form-label">Recebedor:</label>
-        <input type="text" class="form-control" id="Recebedor" placeholder="Quem está recebendo o livro?">
+        <label for="Recebedor" class="form-label text-light">Recebedor:</label>
+        <input type="text" class="form-control" asp-for="Recebedor" id="Recebedor" placeholder="Quem está recebendo o livro?">
+        <span class="text-danger" asp-validation-for="Recebedor"></span>
     </div>
 
     <div class="mb-3">
-        <label for="Fornecedor" class="form-label">Fornecedor:</label>
-        <input type="text" class="form-control" id="Fornecedor" placeholder="Quem está emprestando o livro?">
+        <label for="Fornecedor" class="form-label text-light">Fornecedor:</label>
+            <input type="text" class="form-control" asp-for="Fornecedor" id="Fornecedor" placeholder="Quem está emprestando o livro?">
+            <span class="text-danger" asp-validation-for="Fornecedor"></span>
     </div>
 
     <div class="mb-3">
-        <label for="Livro" class="form-label">Password</label>
-        <input type="text" class="form-control" id="Livro" placeholder="Qual é o livro que está sendo emprestado?">
+        <label for="Livro" class="form-label text-light">Livro</label>
+            <input type="text" class="form-control" asp-for="LivroEmprestado" id="Livro" placeholder="Qual é o livro que está sendo emprestado?">
+            <span class="text-danger" asp-validation-for="LivroEmprestado"></span>
     </div>
 
     <div class="d-flex justify-content-between gap-5 mt-5">
-        <button type="submit" class="btn btn-success">Adicionar</button>
-        <a class="btn btn-primary w-50">Voltar</a>
+        <button type="submit" class="btn btn-success w-50">Adicionar</button>
+        <a class="btn btn-primary w-50" asp-controller="Emprestimo" asp-action="Index">Voltar</a>
     </div>
 </form>
 </div>
