--- a/Views/Emprestimo/Index.cshtml
+++ b/Views/Emprestimo/Index.cshtml
@@ -8,7 +8,7 @@
 	</div>
 
 
-<table  class="table table-dark table-hover">
+<table id="Emprestimos" class="table table-dark table-hover">
 <thead>
 	<tr>
 		<th scope="col">Recebedor</th>
