--- a/Views/Emprestimo/Index.cshtml
+++ b/Views/Emprestimo/Index.cshtml
@@ -7,6 +7,13 @@
 		<a class="btn btn-success mx-2" asp-controller="Emprestimo" asp-action="Cadastrar">Cadastrar novo empréstimo</a>
 	</div>
 
+	@if(TempData["MensagemSucesso"] != null) 
+	{
+		<div class="alert alert-sucess text-light" role="alert">
+			@TempData["MensagemSucesso"]
+		</div>
+	}
+
 
 <table id="Emprestimos" class="table table-dark table-hover">
 <thead>
