--- a/Views/Emprestimo/Index.cshtml
+++ b/Views/Emprestimo/Index.cshtml
@@ -4,7 +4,10 @@
 
 	<div class="d-flex justify-content-between align-items-center mb-5">
 		<h1>Empréstimos</h1>
-		<a class="btn btn-success mx-2" asp-controller="Emprestimo" asp-action="Cadastrar">Cadastrar novo empréstimo</a>
+		<div>
+			<a class="btn btn-success mx-2" asp-controller="Emprestimo" asp-action="Exportar">Exportar</a>
+			<a class="btn btn-success mx-2" asp-controller="Emprestimo" asp-action="Cadastrar">Cadastrar novo empréstimo</a>
+		</div>
 	</div>
 
 	@if(TempData["MensagemSucesso"] != null) 
